# user-idle-rs

./: Cargo.toml  README.md
examples/: get_time.rs
src/: lib.rs  linux_dbus_impl.rs  linux_impl.rs  linux_x11_impl.rs
