[package]
name = "user-idle2"
version = "0.6.2"
authors = ["Edwin Svensson <user_idle_rs@olback.net>", "pieterdd"]
edition = "2021"
description = "Get a user's idle time."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["idle", "gui", "ui", "user", "afk"]

[package.metadata.docs.rs]
all-features = false

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib", "xss"] }
dbus = { version = "0.9" }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.48.0", features = [
  "Win32_Foundation",
  "Win32_System_SystemInformation",
  "Win32_UI_Input_KeyboardAndMouse",
] }

[target.'cfg(target_os = "macos")'.dependencies]
IOKit-sys = "0.1.5"
mach = "0.3.2"
CoreFoundation-sys = "0.1.4"
cstr = "0.2.11"
